# BoardBridge

./: .gitignore  LICENSE  NOTICE  README.md  settings.gradle.kts
.github/workflows/: build.yml  render-test.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bridge_core.cpp  bridge_core.h  egl_core.cpp  egl_core.h  game_client.cpp  game_client.h  glfw_shim.cpp  input_queue.cpp  input_queue.h  jvm_launcher.cpp  log.h  native_bridge.cpp  render_thread.cpp  render_thread.h
app/src/main/java/com/boardbridge/egl/: BridgeSurfaceView.kt  JvmRuntime.kt  MainActivity.kt  NativeBridge.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
ci/: prepare-jvm-assets.sh
docs/: DESIGN.md
gradle/: libs.versions.toml
jvm-test/: HelloJvm.java
